--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "fast-csv": "^2.4.1",
+    "ip": "^1.1.5",
     "mapshaper": "^0.4.57",
     "mongodb": "^2.2.33",
     "mongoose": "^4.13.0",
     "node-fs": "^0.1.7",
     "ogr2ogr": "^1.2.1",
+    "properties-reader": "0.0.16",
     "string-similarity": "^1.2.0"
   }
 }
