--- a/configuration.properties
+++ b/configuration.properties
@@ -9,8 +9,8 @@ crash_collection = nyc_crash_from_2017
 
 
 [backend]
-host = 192.168.0.10
-port = 8888
-
-#host = none
+#host = 192.168.0.10
 #port = 8888
+
+host = http://nycrash-be-bondrake.7e14.starter-us-west-2.openshiftapps.com
+port = 8080
